# biographical_database_generation_pipeline

./: .gitignore  .pre-commit-config.yaml  apply_fixes.py  config.yaml  error_snippets.txt  fetch_error_snippets.sh  fix_remaining.py  pyproject.toml  readme.md
bio_extraction/: __init__.py  checkpoint.py  config.py  contracts.py  dead_letter.py  exceptions.py  logging_config.py  protocol.py  runner.py
bio_extraction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
bio_extraction/phases/: __init__.py  phase1_acquisition.py  phase2_classification.py  phase3_layout.py  phase4_ocr.py  phase5_extraction.py  phase6_resolution.py
bio_extraction/utilities/: __init__.py  bloom_filter.py  pattern_cache.py  review_queue.py
tests/: conftest.py  test_bloom_filter.py  test_e2e_pipeline.py  test_pattern_cache.py  test_review_queue.py
tests/integration/: test_classification_phase_integration.py  test_layout_phase_integration.py  test_phase1_acquisition_integration.py
tests/unit/: test_classification_phase_unit.py  test_layout_phase_unit.py  test_phase1_helpers_unit.py
